--- a/place.html
+++ b/place.html
@@ -7,6 +7,10 @@
     <meta name="author" content="Valeriia Lebedieva">
     <title>Place Title</title>
     <link rel="stylesheet" href="styles/place.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
     <script src="scripts/place.js" defer></script>
 </head>
 <body>
@@ -28,22 +32,14 @@
     </section>
 
     <section class="hero">
-        <img srcset="images/image-small.jpeg 480w, images/image-large.jpg 800w"
+        <img srcset="images/image-small.webp 480w, images/image-large.webp 800w"
              sizes="(max-width: 600px) 480px, 800px"
-             src="images/image-large.jpg"
+             src="images/image-large.webp"
              alt="Place Image">
     </section>
 
     <section class="weather">
-        <h2>Weather
-            <span class="icon">
-                <svg id="weather-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="mobile-icon">
-                    <circle cx="12" cy="12" r="5" fill="yellow" />
-                    <path d="M2 12h4m14 0h4M6.34 6.34l2.83 2.83m12.73 0l-2.83 2.83M6.34 17.66l2.83-2.83m12.73 0l-2.83-2.83" stroke="orange" stroke-width="2"/>
-                </svg>
-                <span class="wider-icon">⛅</span>
-            </span>
-        </h2>
+        <h2>Weather <span class="icon">⛅</span></h2>
         <p>Temperature: 10 °C</p>
         <p>Conditions: Partly Cloudy</p>
         <p>Wind: 5 km/h</p>
