--- a/place.html
+++ b/place.html
@@ -39,12 +39,13 @@
     </section>
 
     <section class="weather">
-        <h2>Weather <span class="icon">⛅</span></h2>
+        <h2>Weather <span class="icon"><img src="images/weather-icon.svg" alt="Weather Icon" class="weather-icon"></span></h2>
         <p>Temperature: 10 °C</p>
         <p>Conditions: Partly Cloudy</p>
         <p>Wind: 5 km/h</p>
         <p id="windchill">Wind Chill: Calculating...</p>
     </section>
+
 </main>
 
 <footer>
