--- a/form.html
+++ b/form.html
@@ -6,6 +6,7 @@
     <meta name="description" content="WDD 131 - Dynamic Web Fundamentals - Valeriia Lebedieva">
     <meta name="author" content="Valeriia Lebedieva">
     <title>Product Review</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/form.css">
 </head>
 <body>
@@ -15,7 +16,6 @@
     <form method="get" action="review.html">
         <label for="product-name">Product Name</label>
         <select id="product-name" name="product-name" required>
-            <option disabled selected>Select a Product ...</option>
         </select>
 
         <label>Overall Rating</label>
@@ -79,6 +79,6 @@
     </footer>
 </div>
 
-<script src="scripts/form.js"></script>
+<script src="scripts/form.js" defer></script>
 </body>
 </html>
