--- a/review.html
+++ b/review.html
@@ -6,6 +6,7 @@
     <meta name="description" content="WDD 131 - Dynamic Web Fundamentals - Valeriia Lebedieva">
     <meta name="author" content="Valeriia Lebedieva">
     <title>Review Confirmation</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/form.css">
 </head>
 <body>
@@ -20,6 +21,6 @@
     <p>© <span id="currentyear"></span> Valeriia Lebedieva, Ukraine</p>
     <p id="lastModified"></p>
 </footer>
-    <script src="scripts/review.js"></script>
+    <script src="scripts/review.js" defer></script>
 </body>
 </html>
