--- a/review.html
+++ b/review.html
@@ -6,6 +6,8 @@
     <meta name="description" content="WDD 131 - Dynamic Web Fundamentals - Valeriia Lebedieva">
     <meta name="author" content="Valeriia Lebedieva">
     <title>Review Confirmation</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/form.css">
 </head>
