--- a/form.html
+++ b/form.html
@@ -6,6 +6,8 @@
     <meta name="description" content="WDD 131 - Dynamic Web Fundamentals - Valeriia Lebedieva">
     <meta name="author" content="Valeriia Lebedieva">
     <title>Product Review</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/form.css">
 </head>
@@ -16,6 +18,7 @@
     <form method="get" action="review.html">
         <label for="product-name">Product Name</label>
         <select id="product-name" name="product-name" required>
+            <!-- Options will be populated by JavaScript -->
         </select>
 
         <label>Overall Rating</label>
