--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Valeriia Lebedieva">
     <title>Pet Shelter Website Plan</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
 <h1>Pet Shelter Website Plan</h1>
